--- a/statistics.html
+++ b/statistics.html
@@ -159,7 +159,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Eurofins/743999697944376-statisticien-ne-h-f-'>Eurofins STATISTICIEN(NE) (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Eurofins/743999697944376-statisticien-ne-h-f-'>Eurofins STATISTICIEN(NE) (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -193,7 +193,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/statistical-programmer-31535'>Statistical Programmer - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/statistical-programmer-31535'>Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -201,7 +201,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/invaiosciences/jobs/4490278002'>Job Application for Statistician at Invaio Sciences</a></h5> 
+<h5><a href='https://boards.greenhouse.io/invaiosciences/jobs/4490278002'>Job Application for Statistician at Invaio Sciences</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -253,7 +253,7 @@ generate?...</p>
 <p>Oct 6, 2019 ... Produce statistical analyses, including generating analysis datasets, tables, 
 listings, and figures for clinical trials. Support Data Management in data set?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://glpg.recruitee.com/o/team-leader-biostatistics-mechelen-be'>
+<h5><a href='https://glpg.recruitee.com/o/team-leader-biostatistics-mechelen-be'>
       Team Leader Biostatistics -Mechelen, BE - Galapagos
     </a></h5> 
 <p><span class="badge badge-light">Mechelen, Belgium  France</span></p>
@@ -291,11 +291,11 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/flagshippioneeringinc/jobs/4387857002'>Job Application for Scientist, Statistical Genetics at Flagship Pioneering, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/flagshippioneeringinc/jobs/4387857002'>Job Application for Scientist, Statistical Genetics at Flagship Pioneering, Inc.</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://recruit.ap.ucsb.edu/JPF01589'>Tenure Track Teaching Faculty Position ? Statistics and Data Science ? Department of Statistics and Applied Probability (JPF01589) - Recruit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.ap.ucsb.edu/JPF01589'>Tenure Track Teaching Faculty Position ? Statistics and Data Science ? Department of Statistics and Applied Probability (JPF01589) - Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -311,7 +311,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cormac-corporation/job/o4qkbfwJ'>CORMAC Careers - Jr. Data Scientist/Statistician</a></h5> 
+<h5><a href='https://jobs.jobvite.com/cormac-corporation/job/o4qkbfwJ'>CORMAC Careers - Jr. Data Scientist/Statistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -363,7 +363,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Rockville, MD Rockville, MD North America United States</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/9E7BD36103'>Statistics & Data Corporation (SDC) - Jobs: Office Coordinator/Administrative Assistant - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/9E7BD36103'>Statistics & Data Corporation (SDC) - Jobs: Office Coordinator/Administrative Assistant - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts United States</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
