--- a/internship.html
+++ b/internship.html
@@ -41,20 +41,36 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://sterblue.recruitee.com/o/business-developer-intern'>
-      Business developer Intern - Sterblue
-    </a></h5> 
+<h5><a href='https://jobs.lever.co/honeycomb/9117a432-17ee-447e-95d9-75da3c6d49f6'>Honeycomb - Graduate Research Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/falcon/cf2ff3a3-c34d-44be-9a50-1b9fd24b2e89'>Falcon.io - R&D Internship</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SeatSwapInc/743999698393763-graphic-web-design-internship'>SeatSwap, Inc. Graphic/Web Design Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://solactive.join.com/jobs/467463-internship-m-f-d-indexing-research'>Job @ Solactive  (Frankfurt): Internship (m/f/d) I... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/mtc/job/oRbjbfwg'>Management & Training Corporation Careers - Substance Abuse Counselor Intern - $1,500 in incentives</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sterblue.recruitee.com/o/business-developer-intern'>
+      Business developer Intern - Sterblue
+    </a></h5> 
+<p><span class="badge badge-light">France</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/falcon/cf2ff3a3-c34d-44be-9a50-1b9fd24b2e89'>Falcon.io - R&D Internship</a></h5> 
+<p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://sterblue.recruitee.com/o/business-developer-intern-lisbon'>
       Business developer Intern - Sterblue
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/ABOUTYOUGmbH/743999698386665-hungarian-speaking-intern-influencer-marketing-m-f-d-'>ABOUT YOU GmbH Hungarian-speaking Intern Influencer Marketing (m/f/d) | SmartRecruiters</a></h5> 
@@ -79,7 +95,7 @@
 <p><span class="badge badge-light">Chicago, IL  Chicago</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://careercenter.bluefishjobs.com/jobs/12865587/student-wellness-and-recreation-facility-operations-internship-now-hiring-spring-2020'>Student Wellness and Recreation Facility Operations Internship; Now Hiring SPRING 2020 , Employment | NIRSA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercenter.bluefishjobs.com/jobs/12865587/student-wellness-and-recreation-facility-operations-internship-now-hiring-spring-2020'>Student Wellness and Recreation Facility Operations Internship; Now Hiring SPRING 2020 , Employment | NIRSA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -119,7 +135,7 @@
 <p><span class="badge badge-light">Oegstgeest, Netherlands</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1832383'>Job Application for Software Engineer - Summer Intern 2020 at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1832383'>Job Application for Software Engineer - Summer Intern 2020 at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -165,7 +181,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698357694-intern-continuous-improvement-process'>Bosch Group Intern, Continuous Improvement Process | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698357694-intern-continuous-improvement-process'>Bosch Group Intern, Continuous Improvement Process | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -185,7 +201,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698353986-corporate-governance-and-compliance-internship'>Bosch Group Corporate Governance and Compliance Internship | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698353986-corporate-governance-and-compliance-internship'>Bosch Group Corporate Governance and Compliance Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -225,7 +241,7 @@
 <p><span class="badge badge-light">Mumbai Mumbai, Maharashtra</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349854-business-internship'>Seeka Technology Business Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349854-business-internship'>Seeka Technology Business Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -245,11 +261,11 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/blizzard/job/o8irbfwM'>Blizzard Entertainment Careers - Game Security Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/blizzard/job/o8irbfwM'>Blizzard Entertainment Careers - Game Security Intern</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/blizzard/job/oJSlbfwR'>Blizzard Entertainment Careers - Program Manager Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/blizzard/job/oJSlbfwR'>Blizzard Entertainment Careers - Program Manager Intern</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -357,7 +373,7 @@
 <p><span class="badge badge-light">Los Angeles, California  Los Angeles</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/internetbrands/job/ogPpbfwp'>Internet Brands Careers - Junior Recruiter</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/ogPpbfwp'>Internet Brands Careers - Junior Recruiter</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -432,23 +448,6 @@ plant Quality Manager; Support Quality Systems Manager with sampling and/or?...<
 <hr/>
 <h5><a href='https://jobs.lever.co/internetcreations/7a7e71f8-9086-4cb3-80c4-4c9a1eea6ede'>Internet Creations - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/internetcreations/abcf5f01-1513-4cc7-868c-45c471dda6de'>Internet Creations - Salesforce Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/internetcreations/c57bec89-fdc0-4f96-bdcd-4322cd5592f7'>Internet Creations - Sales Engineer (Salesforce Services)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/view/job/oKB0afwf'>View, Inc. Careers - Quality Engineer Internship</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 18, 2019 ... Stakeholders ? Occupant ? Developer ? Architect ? Resources ? Project Profiles ? 
-Tech Specs ? Research Studies ? Brochures ? Videos ? Training ? Company.</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/innerworkings/job/omCcbfw5'>InnerWorkings Careers - Intern</a></h5> 
-<p><span class="badge badge-light">Mexico City, Mexico</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
